sumo/tests/netgen/junction_types/errors/unknown_junction_type/errors.netgen
Error: Only the following junction types are known: traffic_light, priority, actuated, agentbased
Quitting (on error).
